Version 2.5, 01 Nov 2015

  [ Joao Eriberto Mota Filho ]

* configure:
    - Changed the default prefix to /usr.
    - Changed the default etc path to /etc.
* manpage:
    - Moved to man/ directory.
    - Using txt2man to generate the manpage.
    - Updated the manpage.
    - Removed some typos.
    - Dropped the Chinese manpage (outdated now).

  [ Other people ]

  [ From original authors ]

* Releasing this old block:

  UNRELEASED:

  - Make axel build on HP-UX, thanks Ciro Iriarte
  - Fix Solaris support (Closes: #312092), thanks Sebastian Kayser
  - Restore kapt meanings (Closes: #311811), thanks Daniel Gimpelevich
  - Add PO-Revision-Date header to ru.po

Version 2.4

- Fix a buffer overflow caused by wrong size limits  when copying strings (Closes: #311569), thanks Michael Schwendt and the Fedora project members
- Fix thread hangups due to incorrect synchronization (Closes: #311469), thanks Yao Shi
- Removed Fedora packaging file. axel will be available in the Fedora repositories soon.
- Use /etc/ instead of /usr/etc/ as the default system-wide configuration location.
- Respect environment CFLAGS in configure.
- Allow special characters in arguments to configure.
- Add MimeType and fix Categories in the desktop file.

Version 2.3

- Wait for thread termination in axel.c:axel_do (Closes: #311255), thanks John Ripa
- New Chinese translation and manpage, thanks Shuge Lee
- Fix LFS support for FTP (Closes: #311320)
- Fix LFS support (Closes: #311324), thanks Rodrigue Le Bayon

Version 2.2:

- Fix a buffer overflow in http.c:http_encode.

Version 2.1:

- Fix version string.  2.0 still reported 1.1, thanks Ajay R Ramjatan
- Fix new MB/s display (was showing B/s).  Thanks Philipp Hagemeister

Version 2.0:

- Large file support thanks thanks David Turnbull
- Custom Header Support thanks Eli Yukelzon
- New russian translation thanks newhren
- Fix segfault in -H option thanks Philipp Hagemeister
- Honour http_proxy and prefer it over HTTP_PROXY